// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountCard renders the card 1`] = `
.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--white);
}

.c8 svg path {
  stroke: var(--black);
}

.c8:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c8:hover svg path {
  stroke: var(--purple-medium);
}

.c8:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c8:active svg path {
  stroke: var(--white) !important;
}

.c8 svg path {
  stroke: var(--white);
}

.c6 {
  width: 24;
  height: 24;
}

.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 hr {
  border-color: var(--white);
}

.c3 h4 {
  margin: 0;
  color: var(--gray-dark);
}

.c3 p {
  margin: 0;
  line-height: 1.5;
}

.c5 {
  position: relative;
  cursor: pointer;
}

.c5 svg {
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c5 .copy-text {
  position: absolute;
  top: calc(50% - 0.2em);
  left: calc(100% + 0.25em);
  opacity: 0;
  color: var(--white);
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
  pointer-events: none;
}

.c5:hover svg {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c5:hover .copy-text {
  opacity: 1;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25em;
  line-height: 1.5;
}

.c4 > a {
  color: var(--white);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a:hover {
  color: var(--white);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 > a svg {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
  vertical-align: middle;
}

.c4 > a svg:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
  fill: var(--purple-medium);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c7 > p,
.c7 > hr {
  margin: 0.5em 0;
}

.c7 > p[role='button'] {
  margin: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 18em;
  height: 18em;
}

.c2 h3 {
  margin-top: 0;
  text-align: left;
}

.c2 h4 {
  color: var(--purple-light);
  text-align: left;
}

.c2 .buttons button:hover {
  color: var(--purple-medium);
  border-color: var(--white);
  background-color: var(--white);
}

.c2 .buttons button:active {
  color: var(--purple-medium) !important;
  border-color: var(--purple-light) !important;
  background-color: var(--purple-light) !important;
}

<div
  class="c0 c1 c2"
>
  <div>
    <h3>
      Account
    </h3>
    <hr />
    <div
      class="c3"
    >
      <h4>
        Your Address
      </h4>
      <div
        class="c4"
        color="var(--white)"
      >
        <a
          href="https://explorer-calibration.glif.link/actor/?address=t0123456789"
          rel="noreferrer noopener"
          target="_blank"
        >
          t0123456789
        </a>
        <span
          class="c5"
          color="var(--white)"
          role="button"
        >
          <svg
            class="c6"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#1A0066"
              height="12"
              width="12"
              x="8"
              y="4"
            />
            <rect
              fill="#E0D7FE"
              height="12"
              width="12"
              x="4"
              y="8"
            />
          </svg>
          <span
            class="copy-text"
          >
            Copy
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="buttons"
  >
    <div
      class="c7"
    >
      <button
        class="c8"
      >
        Show on Device
      </button>
      <button
        class="c8"
      >
        Switch
      </button>
    </div>
  </div>
</div>
`;

exports[`AccountCard renders the card CREATE_MNEMONIC 1`] = `
.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--white);
}

.c8 svg path {
  stroke: var(--black);
}

.c8:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c8:hover svg path {
  stroke: var(--purple-medium);
}

.c8:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c8:active svg path {
  stroke: var(--white) !important;
}

.c8 svg path {
  stroke: var(--white);
}

.c6 {
  width: 24;
  height: 24;
}

.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 hr {
  border-color: var(--white);
}

.c3 h4 {
  margin: 0;
  color: var(--gray-dark);
}

.c3 p {
  margin: 0;
  line-height: 1.5;
}

.c5 {
  position: relative;
  cursor: pointer;
}

.c5 svg {
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c5 .copy-text {
  position: absolute;
  top: calc(50% - 0.2em);
  left: calc(100% + 0.25em);
  opacity: 0;
  color: var(--white);
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
  pointer-events: none;
}

.c5:hover svg {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c5:hover .copy-text {
  opacity: 1;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25em;
  line-height: 1.5;
}

.c4 > a {
  color: var(--white);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a:hover {
  color: var(--white);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 > a svg {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
  vertical-align: middle;
}

.c4 > a svg:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
  fill: var(--purple-medium);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c7 > p,
.c7 > hr {
  margin: 0.5em 0;
}

.c7 > p[role='button'] {
  margin: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 18em;
  height: 18em;
}

.c2 h3 {
  margin-top: 0;
  text-align: left;
}

.c2 h4 {
  color: var(--purple-light);
  text-align: left;
}

.c2 .buttons button:hover {
  color: var(--purple-medium);
  border-color: var(--white);
  background-color: var(--white);
}

.c2 .buttons button:active {
  color: var(--purple-medium) !important;
  border-color: var(--purple-light) !important;
  background-color: var(--purple-light) !important;
}

<div
  class="c0 c1 c2"
>
  <div>
    <h3>
      Account
    </h3>
    <hr />
    <div
      class="c3"
    >
      <h4>
        Your Address
      </h4>
      <div
        class="c4"
        color="var(--white)"
      >
        <a
          href="https://explorer-calibration.glif.link/actor/?address=t0123456789"
          rel="noreferrer noopener"
          target="_blank"
        >
          t0123456789
        </a>
        <span
          class="c5"
          color="var(--white)"
          role="button"
        >
          <svg
            class="c6"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#1A0066"
              height="12"
              width="12"
              x="8"
              y="4"
            />
            <rect
              fill="#E0D7FE"
              height="12"
              width="12"
              x="4"
              y="8"
            />
          </svg>
          <span
            class="copy-text"
          >
            Copy
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="buttons"
  >
    <div
      class="c7"
    >
      <button
        class="c8"
      >
        Switch
      </button>
    </div>
  </div>
</div>
`;

exports[`AccountCard renders the story 1`] = `
.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--white);
}

.c8 svg path {
  stroke: var(--black);
}

.c8:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c8:hover svg path {
  stroke: var(--purple-medium);
}

.c8:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c8:active svg path {
  stroke: var(--white) !important;
}

.c8 svg path {
  stroke: var(--white);
}

.c6 {
  width: 24;
  height: 24;
}

.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 hr {
  border-color: var(--white);
}

.c3 h4 {
  margin: 0;
  color: var(--gray-dark);
}

.c3 p {
  margin: 0;
  line-height: 1.5;
}

.c5 {
  position: relative;
  cursor: pointer;
}

.c5 svg {
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c5 .copy-text {
  position: absolute;
  top: calc(50% - 0.2em);
  left: calc(100% + 0.25em);
  opacity: 0;
  color: var(--white);
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
  pointer-events: none;
}

.c5:hover svg {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c5:hover .copy-text {
  opacity: 1;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25em;
  line-height: 1.5;
}

.c4 > a {
  color: var(--white);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a:hover {
  color: var(--white);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 > a svg {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
  vertical-align: middle;
}

.c4 > a svg:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
  fill: var(--purple-medium);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c7 > p,
.c7 > hr {
  margin: 0.5em 0;
}

.c7 > p[role='button'] {
  margin: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 18em;
  height: 18em;
}

.c2 h3 {
  margin-top: 0;
  text-align: left;
}

.c2 h4 {
  color: var(--purple-light);
  text-align: left;
}

.c2 .buttons button:hover {
  color: var(--purple-medium);
  border-color: var(--white);
  background-color: var(--white);
}

.c2 .buttons button:active {
  color: var(--purple-medium) !important;
  border-color: var(--purple-light) !important;
  background-color: var(--purple-light) !important;
}

<div
  class="c0 c1 c2"
>
  <div>
    <h3>
      Account
    </h3>
    <hr />
    <div
      class="c3"
    >
      <h4>
        Your Address
      </h4>
      <div
        class="c4"
        color="var(--white)"
      >
        <a
          href="https://explorer-calibration.glif.link/actor/?address=t0123456789"
          rel="noreferrer noopener"
          target="_blank"
        >
          t0123456789
        </a>
        <span
          class="c5"
          color="var(--white)"
          role="button"
        >
          <svg
            class="c6"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#1A0066"
              height="12"
              width="12"
              x="8"
              y="4"
            />
            <rect
              fill="#E0D7FE"
              height="12"
              width="12"
              x="4"
              y="8"
            />
          </svg>
          <span
            class="copy-text"
          >
            Copy
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="buttons"
  >
    <div
      class="c7"
    >
      <button
        class="c8"
      >
        Show on Device
      </button>
      <button
        class="c8"
      >
        Switch
      </button>
    </div>
  </div>
</div>
`;
